@@ -1,5 +1,9 @@
 2011-03-14  Guillaume Lazzara  <z@lrde.epita.fr>
 
+	* tests/toolchain/nepomuk/Makefile.am: Add MAGICKXX flags.
+
+2011-03-14  Guillaume Lazzara  <z@lrde.epita.fr>
+
 	* scribo/core/def/lbl_type.hh: Use int_u<n> as label type.
 
 2011-03-14  Guillaume Lazzara  <z@lrde.epita.fr>
